# of-client-launcher

./: .gitignore  ARCHITECTURE.md  README.md  build-preload.js  package-lock.json  package.json  test-adblock.html  tsconfig.base.json  tsconfig.build.json  tsconfig.json  tsconfig.main.json  vite.config.ts
.claude/: .fuse_hidden0002b4ff00002e84
.github/workflows/: build.yml  ci.yml  release.yml
notification-overlay/: .gitignore  package-lock.json  package.json  toast.html
notification-overlay/scripts/: build-standalone.ps1  build-standalone.sh
notification-overlay/src-tauri/: Cargo.toml  tauri.conf.json
notification-overlay/src-tauri/capabilities/: default.json
notification-overlay/src-tauri/src/: lib.rs  main.rs
resources/: notification.html
scripts/: build-game-overlay.js  build-torrent-agent-runtime.js  build-torrent-agent.js  fetch-legendary.js  fetch-ludusavi.js  install-torrent-agent-deps.js  patch-electron-builder.js  test-ludusavi-electron.js  test-save-detection.js  test-scraper-dist.js  test-scraper.ts  test-torrent-agent.js
scripts/fixtures/: sample-game-page.html
services/lan-controller/: .dockerignore  .env.example  Caddyfile  DEPLOY.md  Dockerfile  README.md  compose.direct.yml  compose.yml  deploy.sh  google-oauth-secrets.example.mjs  nginx.vpn.mroz.dev.br.conf.example  server.mjs
services/torrent-agent/: libtorrent_rpc.py  requirements.txt  setup.py  torrent-agent.spec
src/main/: adblock.ts  appIcon.ts  cloudSaves.ts  cloudSavesHistory.ts  cookieManager.ts  db.ts  desktopNotificationWindow.ts  desktopNotifications.ts  downloader.ts  (+33 more)
(+54 files in other folders)
