[package]
name = "void-toast"
version = "0.1.0"
edition = "2021"

[lib]
name = "void_toast"
crate-type = ["rlib"]

[[bin]]
name = "void-toast"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "=2.6.2", features = [] }

[dependencies]
tauri = { version = "=2.11.2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release-fast]
inherits = "release"
opt-level = 1
codegen-units = 256
lto = false
